--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.2",
     "nodemailer": "^6.9.2",
